[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemies/death/EnemyDeath.gd" type="Script" id=1]
[ext_resource path="res://enemies/death/EnemyDestroyed.wav" type="AudioStream" id=2]
[ext_resource path="res://camera/CameraShake.tscn" type="PackedScene" id=3]

[sub_resource type="Curve" id=1]
max_value = 100.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.994253, 48.8636 ), 134.215, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.357616, 1 )
colors = PoolColorArray( 0.482529, 0.765884, 0.972656, 1, 0.996078, 0.996078, 1, 0 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.357616, 1 )
colors = PoolColorArray( 1, 0.617188, 0.617188, 1, 0.996078, 0.996078, 1, 0 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.357616, 1 )
colors = PoolColorArray( 0.535156, 0.514252, 0.514252, 1, 0.996078, 0.996078, 1, 0 )

[sub_resource type="Animation" id=3]
resource_name = "fade"
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 3.5 ),
"transitions": PoolRealArray( 1, 2, 3 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.67451 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0 ) ]
}

[node name="EnemyDeath" type="Node2D" groups=[
"camera_shake",
]]
modulate = Color( 1, 1, 1, 0.67451 )
script = ExtResource( 1 )

[node name="BlueParticles" type="CPUParticles2D" parent="."]
amount = 15
lifetime = 40.0
speed_scale = 10.0
explosiveness = 0.7
lifetime_randomness = 0.1
emission_shape = 1
emission_sphere_radius = 4.0
spread = 180.0
gravity = Vector2( 1, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.5
angular_velocity = 0.5
angular_velocity_random = 1.0
orbit_velocity_random = 0.1
radial_accel = 3.0
radial_accel_random = 0.8
tangential_accel = 0.1
tangential_accel_random = 1.0
damping_random = 1.0
damping_curve = SubResource( 1 )
angle = 30.0
angle_random = 1.0
scale_amount = 16.0
scale_amount_random = 1.0
color_ramp = SubResource( 4 )
hue_variation = 0.01
hue_variation_random = 1.0

[node name="RedParticles" type="CPUParticles2D" parent="."]
amount = 5
lifetime = 40.0
speed_scale = 10.0
explosiveness = 0.7
lifetime_randomness = 0.1
emission_shape = 1
emission_sphere_radius = 4.0
spread = 180.0
gravity = Vector2( 1, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.5
angular_velocity = 0.5
angular_velocity_random = 1.0
orbit_velocity_random = 0.1
radial_accel = 3.0
radial_accel_random = 0.8
tangential_accel = 0.1
tangential_accel_random = 1.0
damping_random = 1.0
damping_curve = SubResource( 1 )
angle = 30.0
angle_random = 1.0
scale_amount = 16.0
scale_amount_random = 1.0
color_ramp = SubResource( 2 )
hue_variation = 0.05
hue_variation_random = 1.0

[node name="GrayParticles" type="CPUParticles2D" parent="."]
amount = 5
lifetime = 40.0
speed_scale = 10.0
explosiveness = 0.7
lifetime_randomness = 0.1
emission_shape = 1
emission_sphere_radius = 4.0
spread = 180.0
gravity = Vector2( 1, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.5
angular_velocity = 0.5
angular_velocity_random = 1.0
orbit_velocity_random = 0.1
radial_accel = 3.0
radial_accel_random = 0.8
tangential_accel = 0.1
tangential_accel_random = 1.0
damping_random = 1.0
damping_curve = SubResource( 1 )
angle = 30.0
angle_random = 1.0
scale_amount = 16.0
scale_amount_random = 1.0
color_ramp = SubResource( 5 )
hue_variation = 0.05
hue_variation_random = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 3 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
autoplay = true
bus = "SFX"

[node name="CameraShake" parent="." instance=ExtResource( 3 )]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
